force-app/main/default/objects/OpportunitySnapshotSE__c/OpportunitySnapshotSE__c.object-meta.xml
<CustomObject>
    <label>Opportunity Snapshot SE</label>
    <nameField>
        <displayFormat>SN-{0000000}</displayFormat>
        <label>Opportunity Snapshot SE</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Snapshots SE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>