force-app/main/default/objects/OpportunitySnapshotSE__c/fields/Interview_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date_1__c</fullName>
    <label>Interview Date 1</label>
    <type>Date</type>
</CustomField>