force-app/main/default/objects/OpportunitySnapshotSE__c/fields/Interview_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date_2__c</fullName>
    <label>Interview Date 2</label>
    <type>Date</type>
</CustomField>