force-app/main/default/objects/OpportunitySnapshotSE__c/fields/Interview_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date_3__c</fullName>
    <label>Interview Date 3</label>
    <type>Date</type>
</CustomField>