force-app/main/default/objects/OpportunitySnapshotSE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Amount__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>